Added favicon and edited album links

--- a/docs/style/listen.css
+++ b/docs/style/listen.css
@@ -90,6 +90,21 @@ body{
     filter: contrast(150%);
 }
 
+@media screen and (max-width: 900px){
+    .page{
+        width: 60%;
+        margin-left: 15%;
+    }
+    #cover-flow{
+        flex-direction: column;
+        align-items: center;
+    }
+    .album{
+        margin-bottom: 20px;
+        margin-right: 0;
+        max-width: 100%;
+    }
+}
 
 @media screen and (max-width: 600px) {
     .page{
@@ -97,14 +112,7 @@ body{
         margin-left: 0;
     }
 
-    #cover-flow{
-        flex-direction: column;
-        align-items: center;
-    }
 
-    .album{
-        margin-bottom: 20px;
-        margin-right: 0;
-        max-width: 100%;
-    }
+
+
 }
