--- a/docs/style/watch.css
+++ b/docs/style/watch.css
@@ -16,10 +16,11 @@ h1{
 
 .vid {
     position: relative;
-    padding-bottom: 56.25%; /* - 16:9 aspect ratio (most common) */
+    padding-bottom:40%; /* - 16:9 aspect ratio (most common) */
     padding-top: 30px;
     overflow: hidden;
     max-width: 700px;
+    max-height: 400px;
 }
 
 .vid iframe,
