--- a/docs/style/style.css
+++ b/docs/style/style.css
@@ -112,7 +112,10 @@ h3.contrast{
     transform: translate(var(--click-offset), var(--click-offset));
 }
 
-
+.footer{
+    height: 75px;
+    width: 100%;
+}
 @media screen and (max-width: 800px) {
     .page{
         width: 100%;
