--- a/docs/style/follow.css
+++ b/docs/style/follow.css
@@ -1,18 +1,31 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.3.6,
+* Autoprefixer: v10.3.1
+* Browsers: last 4 version
+*/
+
 .page{
     margin-top: 10vh;
     width: 70vw;
 }
 
 #socials{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     
     text-align: left;
 }
 
 .social{
     border: var(--border-width) solid black;
-    box-shadow:  var(--border-width) var(--border-width) 0px black;
+    -webkit-box-shadow:  var(--border-width) var(--border-width) 0px black;
+            box-shadow:  var(--border-width) var(--border-width) 0px black;
     color: white;
 
     font-size: 30px;
@@ -24,13 +37,17 @@
 }
 
 .social:hover{
-    filter:grayscale(80%);
+    -webkit-filter:grayscale(80%);
+            filter:grayscale(80%);
     cursor: pointer;
 }
 
 .social:focus{
-    box-shadow:  calc(var(--border-width) - var(--click-offset)) calc(var(--border-width) - var(--click-offset)) 0px black;
-    transform: translate(var(--click-offset), var(--click-offset));
+    -webkit-box-shadow:  calc(var(--border-width) - var(--click-offset)) calc(var(--border-width) - var(--click-offset)) 0px black;
+            box-shadow:  calc(var(--border-width) - var(--click-offset)) calc(var(--border-width) - var(--click-offset)) 0px black;
+    -webkit-transform: translate(var(--click-offset), var(--click-offset));
+        -ms-transform: translate(var(--click-offset), var(--click-offset));
+            transform: translate(var(--click-offset), var(--click-offset));
 }
 
 @media screen and (max-width: 800px) {
