--- a/docs/style/listen.css
+++ b/docs/style/listen.css
@@ -1,5 +1,14 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.3.6,
+* Autoprefixer: v10.3.1
+* Browsers: last 4 version
+*/
+
 body{
-    justify-content: left;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
 }
 
 .page{
@@ -15,6 +24,8 @@ body{
     letter-spacing: 5px;
 
     background-color: black;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
     width: fit-content;
 }
 #filter{
@@ -30,8 +41,13 @@ body{
 
 #cover-flow{
     width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
     text-align: left;
 }
 
@@ -39,19 +55,24 @@ body{
     position: relative;
     max-width: 400px;
     margin-right: 50px;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
     transition: 0.3s;
 }
 
 .album.focus{
     z-index: 5;
-    transform: translateY(-5px);
+    -webkit-transform: translateY(-5px);
+        -ms-transform: translateY(-5px);
+            transform: translateY(-5px);
 
 }
 
 .album img{
     width: 100%;
     height: 100%;
-    object-fit: contain;
+    -o-object-fit: contain;
+       object-fit: contain;
 }
 
 .album-options{
@@ -76,6 +97,8 @@ body{
     padding: 10px;
 
     display: block;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
     transition: 0.3s;
 }
 
@@ -87,7 +110,8 @@ body{
 
 .album:hover, .album.focus{
     cursor: pointer;
-    filter: contrast(150%);
+    -webkit-filter: contrast(150%);
+            filter: contrast(150%);
 }
 
 @media screen and (max-width: 900px){
@@ -96,8 +120,13 @@ body{
         margin-left: 15%;
     }
     #cover-flow{
-        flex-direction: column;
-        align-items: center;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
     }
     .album{
         margin-bottom: 20px;
