--- a/docs/style/watch.css
+++ b/docs/style/watch.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.3.6,
+* Autoprefixer: v10.3.1
+* Browsers: last 4 version
+*/
+
 .page{
     margin-top: 10vh;
     width: 70vw;
@@ -8,8 +15,13 @@ h1{
 }
 
 #videos{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
 
     text-align: left;
 }
